# labmedical_web

./: .gitignore  README.md
backend/: .env.example  Cargo.toml  README.md  render.yaml
backend/migrations/: 20240101000000_initial.sql  20240102000000_fix_timestamps.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/middleware/: auth.rs
backend/src/models/: admin.rs  category.rs  mod.rs  product.rs  quote.rs
backend/src/routes/: admin.rs  mod.rs  public.rs
backend/src/services/: auth.rs  email.rs  mod.rs  s3.rs  validation.rs
docs/: API.md
frontend/: .env.example  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/src/components/: Footer.astro  Navbar.astro
frontend/src/layouts/: Layout.astro
frontend/src/lib/: api.ts  validation.ts
frontend/src/lib/stores/: quoteCart.ts
frontend/src/pages/: 404.astro  cotizacion.astro  documentacion.astro  index.astro  privacidad.astro  productos.astro  terminos.astro
frontend/src/pages/productos/: [slug].astro
